--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.LatihanMobile"
         tools:targetApi="31">
         <activity
+            android:name=".Prak7_2"
+            android:exported="false" />
+        <activity
             android:name=".UTS2"
             android:exported="false" />
         <activity
