--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.LatihanMobile"
         tools:targetApi="31">
         <activity
+            android:name=".Prak5_4"
+            android:exported="false" />
+        <activity
+            android:name=".Prak5_3"
+            android:exported="false" />
+        <activity
             android:name=".Latihan6_1"
             android:exported="false" />
         <activity
