--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,40 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LatihanMobile"
         tools:targetApi="31">
+        <activity
+            android:name=".Prak10_1"
+            android:exported="false" />
+        <activity
+            android:name=".Prak9_1"
+            android:exported="false" />
+        <activity
+            android:name=".Latihan8_1"
+            android:exported="false" />
+        <activity
+            android:name=".Prak8_4"
+            android:exported="false" />
+        <activity
+            android:name=".Prak8_3"
+            android:exported="false" />
+        <activity
+            android:name=".Prak8_2"
+            android:exported="false" />
+        <activity
+            android:name=".Prak8_1"
+            android:exported="false" />
         <activity
             android:name=".Prak5_4"
             android:exported="false" />
