--- a/local.properties
+++ b/local.properties
@@ -1,4 +1,4 @@
-## This file must *NOT* be checked into Version Control Systems,
+﻿## This file must *NOT* be checked into Version Control Systems,
 # as it contains information specific to your local configuration.
 #
 # Location of the SDK. This is only used by Gradle.
@@ -6,3 +6,4 @@
 # header note.
 #Thu Oct 31 07:43:12 WIB 2024
 sdk.dir=/home/umrmaulana/Android/Sdk
+# sdk.dir=C:\\Users\\umrmaulana\\AppData\\Local\\Android\\Sdk
